# Bidirectional-implementation-of-Spectral-Rendering

./: README.md
SRC/: CMakeLists.txt  Color.cpp  Color.h  aabb.h  aarect.h  benchmark.cpp  benchmark.h  box.h  bvh.h  camera.h  constant_medium.h  hittable.h  hittable_list.h  main.cpp  material.h  moving_sphere.h  perlin.h  random.h  ray.h  sphere.h  stb_image.h  stb_image_write.h  surface_texture.h  svpng.h  texture.h  triangle.h  vec3.h
SRC/SRC/: CMakeLists.txt  Color.cpp  camera.h  main.cpp  ray.h  stb_image.h  stb_image_write.h  texture.h  triangle.h  vec3.h
